--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -76,7 +76,9 @@ Although the changes Patel described are configured in Tesco-specific ways by Du
 
 [^65.2]: Tesco changed its relations to customers in 1984 when they launched a very online grocery shopping system [@Winterman_2013]. 
 
+
 ```{r humby-1984, fig.cap = 'Abstract from a Clive Humby presentation (Humby,1984)'}
+        library(knitr)
         include_graphics('figure/2_humby_young_org_1994.png')
 ```
 
@@ -187,18 +189,18 @@ All of these considerations -- the problem of a changing customer, the need to u
 
 ## Platform experiments reduce interfering propensities
 
-In his account of probabilities as physical propensities, Popper emphasises why laboratory experiments are important to probability:
+In his account of probabilities as physical propensities, Popper emphasises why laboratory experiments are important:
 
 > experiments work ... by creating, at will, artificial conditions that either exclude, or reduce to zero, all the interfering and disturbing propensities [@Popper_1990,23].
 
-Like the accounts of laboratory practice provided by science studies [@Latour_1986;  @Lynch_1993], Popper understands experiments as stabilizing the conditions so that probabilities become less variable. Experiments play an important role in conversion events, or in the process of bring new predictive models to bear on shopping practice. A crucial consideration for  a recommender system designer will be how to experimentalize the systems recommendations so that they are not disturbed by other propensities. This is an inordinately difficult challenge, since, as we have seen, grocery shopping takes place at the intersection of normative and actual social orders, individual and group belongings, and logistically global economic processes. 
+Like the accounts of laboratory practice provided by science studies [@Latour_1986;  @Lynch_1993], Popper understands experiments as stabilizing the conditions so that probabilities become less variable. Experiments play an important role in conversion events, or in the process of bring new predictive models to bear on shopping practice. A crucial consideration for  a recommender system designer will be how to experimentalize the systems recommendations so that they are not disturbed by other propensities. This is an inordinately difficult challenge in some settings, since, as we have seen, grocery shopping takes place at the intersection of normative and actual social orders, individual and group belongings, and logistically global economic processes. In such situations, propensities are inherently labile.
 
 |Test A|Test B|
 |------|------|
 |Control A|Control B|
 |---------------------
 
-Experimentalization, the practice of creating conditions that reduce disturbing propensities, runs deep in the conversion event.  The predictions of the recommender system themselves are the subject of experiment. Patel described the deployment of  the personal relevance model in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in  table. In the  A/B testing,  customers  receive recommendations from different models (the old recommender systems vs. the new one; a logistic regression model vs. a random forest model, etc.).   The randomised application of  competing predictive models, draws on protocols for randomised clinical trials first developed in the 1960's, and is widely used in social media platforms and hence in the implementation and observation of the effects of recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds a layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally.
+Experimentalization, the practice of creating conditions that reduce disturbing propensities, runs deep in big data conversion events.  The predictions of the recommender system themselves are the subject of experiment. Patel described the deployment of  the personal relevance model in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in  table. In the  A/B testing,  customers  receive recommendations from different models (the old recommender systems vs. the new one; a logistic regression model vs. a random forest model, etc.).   The randomised application of  competing predictive models, draws on protocols for randomised clinical trials first developed in the 1960's, and is widely used in social media platforms and hence in the implementation and observation of the effects of recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds a layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally.
 
 [^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operating in its infrastructure [@Dunn_2016].[@Christian_2012] provides information on the extent of A/B testing in web and social media. 
 
@@ -208,7 +210,7 @@ Random allocation of customers to control and test groups occurs without taking 
 
 ## The openness of the data: new features
 
-Whatever disturbing factors or interferences the experimental trials of different predictive models reduce, another stream of propensities runs away from the goal of personal relevance. Popper suggest that the realization of tendencies is open-ended:
+Whatever disturbing factors or interferences the experimental trials of different predictive models reduce, another stream of propensities runs off the terrain of personal relevance. Popper suggest that the realization of tendencies is inevitably open-ended:
 
 >What may happen in the future ... is, to some extent, open. There are many possibilities trying to realize themselves, but few of them have a very high propensity, given the initial conditions [@Popper_1990, 22].
 
@@ -216,16 +218,20 @@ There are different ways of reading this statement. We can read Popper as statin
 
 Several times in her presentation, Patel emphasized the importance of 'good features' in the data, and much of her presentation concerned DunnHumby's efforts to construct 'good features.' A 'feature' in the context of machine learning and predictve modelling refers to a variable included in a predictive model [@Domingos_2012]. A 'good feature' contributes to the accuracy, precision, specificity or any of the other measures of prediction applied to machine learning models in practice. The construction of 'good features', however, remains open to many different possibilities, some of which are more practically feasible than others, and some of which are more aligned with personal relevance than others.
 
-The main efforts that DunnHumby made to  construct good features were not closely focused on individuals  but sought to include  relations between things in the predictive model. Patel, for instance, described the problem of 'basket similarity.' The recommender system should not recommend items that are too similar to groceries already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation that complements already selected items. How could the recommender system avoid similiarities and  prefer complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning similarity and complementarity are shaped by social groups, orderings and circumstances? A predictive model could only do that if it had some sense of the relation between items already in the list and the products elsewhere.
+The main efforts that DunnHumby made to  construct good features were not closely focused on individuals  but sought to address relations between things in the predictive model. Patel, for instance, described the problem of 'basket similarity.' The recommender system should not recommend items that are too similar to groceries already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation that complements already selected items. How could the recommender system avoid similiarities and  prefer complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning similarity and complementarity are shaped by social groups, orderings and circumstances? A predictive model could only do that if it had some sense of the relation between items already in the list and the products elsewhere.
 
-The 'personal relevance' model sought to include the similarities and complementarities between items. The DunnyHumby data scientists constructed a new feature from the previous purchase data measuring substitutability and complementarity between products.  Taking all the baskets of items purchased on the basis of recommendations, they derived a  new feature, what DunnyHumby termed 'self-learning substitutes.' Added to the relevance model, the 'self learning substitutes' feature adds another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response').  The self-learning substitutes feature is complex. Patel mentioned that it took the form of a 'design matrix of 14,000 columns.' 14,000 new explanatory variables were added to the logistic regression model.  Recommendation would be subtly re-weighted by this complex derived feature.[^215]
+The 'personal relevance' model sought to include the similarities and complementarities between items. The DunnyHumby data scientists constructed a new feature from the previous purchase data measuring substitutability and complementarity between products.  Taking all the baskets of items purchased on the basis of recommendations, they derived a  new feature, what DunnyHumby termed 'self-learning substitutes.' Added to the relevance model, the 'self learning substitutes' feature adds another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response').  The self-learning substitutes feature is complex. Patel mentioned that it took the form of a 'design matrix of 14,000 columns.' 14,000 new explanatory variables were added to the logistic regression model.  Recommendation would be subtly re-weighted by this complex derived feature.[^215] 
+
+In a world of propensities, the different encounters with the data staged in the personal relevance model cannot be reduced to any simple probabilistic calculation. Rather, as Patel's presentation of the different models, the logistics of running the models in a platform setting, the experimental validation of the model in A/B testing, and the construction of new features that sought to increase complementarities and reduce similarities suggests, the expression of propensities occurs in a changing weave of infrastructure, mathematics, history and logistics. None of these has a particularly strong relation to personhood or individual experience, even if personalization the main way this weave is figured.     
 
 [^215]: The proliferation of variables or features in the model itself introduces new instabilities, new 'possibilities trying to realize themselves' and the DunnyHumby data scientists used  '`L1 regularization` to drive coefficients down to zero', or, put more simply, to exclude variables there were not contributing much to the predictions produced by the model. Even this added feature does not exhaust DunnHumby's attempts to re-shape the recommender system. They were just beginning, Patel reported, to model complementarities between things. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella,` especially if I have nut allergies.  From the standpoint of customer data science, Patel emphasised the operational significance of predicting complementarities:  'complementarity drives conversion.' 
 
 # F. Conclusion
 
-The personalization of recommendations has been a distinctive feature of big data conversion narratives and practice. The Tesco recommender system, starting from its early experiments with demographic data-mining, its later adoption of a rule-based 'market basket' analysis system, and its recent implementation of a machine learning 'personal relevance model' follows the trajectory of personalization.  Its recent big data conversion event largely takes the form of personalization. Individualizing personalization, however,  is ill-fit to the socially complex negotiations of grocery shopping, and tends to obscure other implications.  Conversion events,  in both the sense of the purchases made on the basis of recommendation and the narratives of changes in modelling practice related by data scientists do not easily map to personalization. They include relations running between people and things in time. They include an ongoing process of adjusting, scaffolding, intervening and configuring orders. Only because grocery shopping is  personally pre-ordered by lists can a predictive recommendation, provisionally conducive to new conversion events, gain traction.  
+The personalization of recommendations has been a distinctive feature of big data conversion narratives and practice. The Tesco recommender system, starting from its early experiments with demographic data-mining, its later adoption of a rule-based 'market basket' analysis system, and its recent implementation of a machine learning 'personal relevance model' documents the trajectory of a personalizing conversion event.  Its recent big data conversion event largely takes the form of personalization. Individualizing personalization, however, is ill-fit to the socially complex negotiations of grocery shopping, and tends to obscure other implications.  Conversion events,  in both the sense of the purchases made on the basis of recommendation and the narratives of changes in modelling practice related by data scientists do not easily map to personalization. They include relations running between people and things in time. They include an ongoing process of adjusting, scaffolding, intervening and configuring orders -- in several senses of that term -- that range across supply chain management. 
 
-In the context of recommender systems, the constitutive incompleteness of shopping lists and their propensity to expand or change might be more important than their capacity to be personalized. I suggest that we might understand what precedes and exceeds personalization as probabilization. The framing of this conversion as a 'flat difference of degree, such that it appears as though everything is calculable' [@Amoore_2015, 361] risks misunderstanding the different propensities tending to realization.   If, as Popper argues, a propensity-based account of probabilities 'amounts to generalizing and extending the idea of forces again' [@Popper_1990,14], then we should see the compute  platforms, databases, software libraries, web interfaces and global supply chain logistics as part of this conversion event, as  tendencies or propensities in  the process of realization. When we track what is practically done to construct a personal relevance model and apply it to a shopping list, we see conditional probabilities assembled in predictive models, but also in the rhythms of  platform and infrastructural configurations and experiments that gather and process data,  and in the open-ended construction of features in data. In various ways, these tendencies shift and complicate the  associations between people and things, people and people, and things with things. They cut across boundaries between the personal and impersonal.  If social order is made of propensities to associate, if to be social is a propensity to associate, then big data conversion events operationalize association in matrices of propensity.
+I have suggested that we might understand recommender system as part of the ongoing operationalization of propensities described by Popper. The conversion described in this case is a propensity in actualisation, but a propensity that has the character of expressing propensities through predictions and recommendations. From the perspective of a world of propensities, the constitutive incompleteness of shopping lists and their propensity to expand or change might be more important than their capacity to be personalized. Only because grocery shopping is  personally pre-ordered by lists can a predictive recommendation, somewhat conducive to conversion events, gain traction. 
+
+I suggest that we might understand what surrounds and exceeds personalization as probabilization. The framing of prediction as a 'flat difference of degree, such that it appears as though everything is calculable' [@Amoore_2015, 361] affirms the importance of calculation but risks misunderstanding the how propensities tend towards realization, and how models express those tendencies.   If, as Popper argues, a propensity-based account of probabilities 'amounts to generalizing and extending the idea of forces again' [@Popper_1990,14], then we should see the compute  platforms, databases, software libraries, various predictive models, web interfaces, apps and global supply chain logistics as part of this conversion event, as  tendencies or propensities in  the process of realization.  When we track what is practically done to construct a personal relevance model and apply it to a shopping list, we see conditional probabilities assembled in predictive models, but also in the rhythms of  platform and infrastructural configurations and experiments that gather and process data,  and in the open-ended construction of features in data. In various ways, these tendencies shift and complicate the  associations between people and things, people and people, and things with things. They cut across boundaries between the personal and impersonal.  If social order is made of propensities to associate, if to be social is a propensity to associate, then big data conversion events operationalize association in matrices of propensity.
 
 # References
